<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdl_graph_slam</name>
  <version>0.0.0</version>
  <description>The hdl_graph_slam package</description>

  <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>nmea_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>ndt_omp</depend>
  <depend>fast_gicp</depend>
  <depend>PCL</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</exec_depend> -->
  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</exec_depend> -->
  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-progressbar</exec_depend> -->
  <!-- <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-progressbar</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
